# Restaurant-Management-System

./: CMakeLists.txt  README.md  checkoutpage.cpp  checkoutpage.h  checkoutpage.ui  clickablelabel.cpp  clickablelabel.h  homepage.cpp  homepage.h  homepage.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.json  orderpage.cpp  orderpage.h  orderpage.ui  product.cpp  product.h  productcatalog.cpp  productcatalog.h  producthasher.h  productspage.cpp  productspage.h  productspage.ui  reportspage.cpp  reportspage.h  reportspage.ui  resources.qrc  restaurant.cpp  restaurant.h  table.cpp  table.h  tablesdialog.cpp  tablesdialog.h  tablesdialog.ui  tablespage.cpp  tablespage.h  tablespage.ui
